2021-09-26  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>
	* pdfdev.c: Remove all my changes on 2021-03-04 and 2021-03-05
	which were completely wrong.
	* pkfont.c: Before calling kpse_find_glyph(ident, ...), remove
	a suffix .pfb from the ident, if the suffix exists, because the
	suffix prevents mktexpk to work right.
	* configure.ac: version 20210926.

2021-06-09  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfencoding.c: Replace the changes made on 2021-06-02. The
	segmentation fault problem was introduced by the changes in
	rev.7557 which were not just problematic but also making it
	unclear that it's not possible to freely choose which
	encodings to use as the base encoding. Remove useless base
	encoding entry which was causing the problem from the
	pdf_encoding struct.
	* configure.ac: Version 20210609.

2021-06-05  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfximage.c: Improved error messages when PDF/PS inclusion
	fails. Output page numbers too.
	* configure.ac: Version 20210605.

2021-06-02  Masamichi HOSODA  <trueroad@trueroad.jp>

	* pdfencoding.c: Fix a segmentation fault on pdfencoding.
	https://tug.org/pipermail/dvipdfmx/2021-May/000270.html
	https://github.com/texjporg/tex-jp-build/issues/114

2021-05-31  Karl Berry  <karl@tug.org>

	* dvipdfmx.1: bug reporting address now dvipdfmx@tug.org
	(https://lists.tug.org/dvipdfmx).

2021-05-05  Akira Kakuto  <kakuto@w32tex.org>

	* pdfximage.c: Support non-ascii TMP and TEMP to call
	Ghostscript.

2021-04-17  Akira Kakuto  <kakuto@w32tex.org>

	* pkfont.c: Remove all changes in 2020-12-14 and recover the
	original pkfont.c.

2021-04-15  Akira Kakuto  <kakuto@w32tex.org>

	* tfm.c: Improve to find ofm files.

2021-04-03  Akira Kakuto  <kakuto@w32tex.org>

	* pkfont.c: Remove unnecessary changes made on 2020-12-14.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-18  Akira Kakuto  <kakuto@w32tex.org>

	* dvipdfmx.c: A bug in compat mode is found and fixed by
	Christian Schenk: