@@ -1108,11 +1108,6 @@ main (int argc, char *argv[])
    */
   has_paper_option = 0;
 
-#ifndef MIKTEX
-  kpse_init_prog("", font_dpi, NULL, NULL);
-  kpse_set_program_enabled(kpse_pk_format, true, kpse_src_texmf_cnf);
-#endif
-  pdf_font_set_dpi(font_dpi);
   if (!dvi_filename) {
     if (verbose)
       MESG("No dvi filename specified, reading standard input.\n");
@@ -1153,6 +1148,13 @@ main (int argc, char *argv[])
       get_enc_password(oplain, uplain);
     }
   }
+
+  /* moved to here because -r option was not effective */
+#ifndef MIKTEX
+  kpse_init_prog("", font_dpi, NULL, NULL);
+  kpse_set_program_enabled(kpse_pk_format, true, kpse_src_texmf_cnf);
+#endif
+  pdf_font_set_dpi(font_dpi);
 
   /* moved to here because image caching was not effective */
   dpx_delete_old_cache(image_cache_life);
